manifests/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pvc-webhook-ns

---
apiVersion: v1
kind: Service
metadata:
  name: pvc-webhook-svc
  namespace: pvc-webhook-ns
  annotations:
    cert-manager.io/issuer: "krogerissuer"
    cert-manager.io/certificate-name: "emptydir2pvc-svc-cert" # <<!nav>>Certificate<<!/nav>>
  labels:
    app: pvc-webhook
spec:
  selector: pvc-webhook
  ports:
  - name: https
    port: 443
    targetPort: 9443

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc-webhook
  namespace: pvc-webhook-ns
  labels:
    app: pvc-webhook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pvc-webhook
  template:
    metadata:
      labels:
        app: pvc-webhook
    spec:
      imagePullSecrets:
        - name: jfrog-secret
      containers:
        - name: pvc-webhook
          image: krogertechnology-docker-dev.jfrog.io/ecs_docker_repo/epmtydir2pvc/epmtydir2pvc:latest
          imagePullPolicy: IfNotPresent
          ports:
          - name: https
            containerPort: 9443
          volumeMounts:
            - name: webhook-certs
              mountPath: /tls
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: pvc-webhook-tls
---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pvc-webhook-webhook
  annotations:
    cert-manager.io/inject-ca-from: pvc-webhook-ns/pvc-webhook-svc-cert
  labels:
    app: pvc-webhook
webhooks:
- name: pvc-webhook.pvc-webhook-ns.svc
  admissionReviewVersions: ["v1beta1"]
  sideEffects: None
  failurePolicy: Fail
  matchPolicy: Equivalent
  reinvocationPolicy: IfNeeded
  clientConfig:
    service:
      name: pvc-webhook-svc
      namespace: pvc-webhook-ns
      path: "/mutate"
      port: 443
    #caBundle: ${CA_BUNDLE_BASE64} # cert-manager can inject via patch or use cainjector if available
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE","UPDATE"]
    resources: ["pods"]
    scope: "*"
  objectSelector:
    matchExpressions:
    - key: pvc-webhook/enabled
      operator: In
      values: ["true"]
